--- a/src/layouts/Header/Header.scss
+++ b/src/layouts/Header/Header.scss
@@ -2,41 +2,58 @@ header{
     align-items: center;
     padding-top: 20px;
     padding-bottom: 20px;
-}
 
-header .container {
-    justify-content: space-between;
-    align-items: center;
-}
+    .container {
+        justify-content: space-between;
+        align-items: center;
+    }
 
-.spotify-logo{
-    width: 130px;
-    cursor: pointer;
+    .spotify-logo{
+        width: 130px;
+        cursor: pointer;
+    }
 }
 
 .navigation{
     margin-inline-end: auto;
     gap: 40px;
-    
+
+    ul{
+        gap: 20px;
+        margin: 0 40px;
+
+        li {
+            cursor: pointer;  
+            
+            &:hover, &.active{
+                color: #1fdf64;
+            }
+        }
+    }
 }
 
-.navigation ul{
-    gap: 20px;
-    margin: 0 40px;
-}
 
-.navigation ul li {
- cursor: pointer;   
-}
 
-.navigation ul li:hover,
-.navigation ul li.active  {
-    color: #1fdf64;
-}
 
 .search-input {
     position: absolute;
     left: 0;
     right: 0;
     margin: 0 auto;
+}
+
+
+.user-widget{
+    ul{
+        gap: 20px;
+        margin: 0 40px;
+        
+        li {
+            cursor: pointer;  
+            
+            &:hover, &.active{
+                color: #1fdf64;
+            }
+        }
+    }
 }
