--- a/src/components/CardItem/CardItem.scss
+++ b/src/components/CardItem/CardItem.scss
@@ -1,5 +1,4 @@
 .card{
-    width: 180px;
     border-radius: 5px;
     padding: 15px;
     overflow: hidden;
@@ -17,7 +16,7 @@
 
     .cover{
         position: relative;
-        width: 150px;
+        width: 100%;
         height: 150px;
         margin-bottom: 18px;  
 
