--- a/src/layouts/Header/Header.scss
+++ b/src/layouts/Header/Header.scss
@@ -1,7 +1,10 @@
 header{
+    position: sticky;
+    z-index: 10;
+    top: 0;
+    background: #121212;    
     align-items: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding: 20px 0;
 
     .container {
         justify-content: space-between;
@@ -22,9 +25,7 @@ header{
         gap: 20px;
         margin: 0 40px;
 
-        li {
-            cursor: pointer;  
-            
+        li {            
             &:hover, &.active{
                 color: #1fdf64;
             }
@@ -43,13 +44,13 @@ header{
 }
 
 
-.user-widget{
-    ul{
+.user-menu{
+    .trigger-menu{}
+    .floating-menu{
         gap: 20px;
         margin: 0 40px;
         
-        li {
-            cursor: pointer;  
+        li { 
             
             &:hover, &.active{
                 color: #1fdf64;
