--- a/src/components/TopTracks/TopTracks.scss
+++ b/src/components/TopTracks/TopTracks.scss
@@ -3,15 +3,53 @@
     gap: 20px;
 
     .top-tracks-row {
+        position: relative;
         justify-content: space-between;
+        align-items: center;
+        padding: 10px;
+        border-radius: 5px;
+        transition: background-color 0.4s;
 
         .track-details {
             gap: 20px;
+
+            .track-img{
+                position: relative;
+                button{
+                    opacity: 0;
+                    position: absolute;
+                    left: 50%;
+                    top: 50%;
+                    transform: translate(-50%, -50%);
+                }
+            }
 
             .track-details-bottom{
                 flex-direction: column;
                 justify-content: space-between;
             }
+        }
+
+        &:hover{
+            background-color: #282828;
+
+            .track-details {    
+                .track-img{
+                    &::before{
+                        content: "";
+                        position: absolute;
+                        width: 100%;
+                        height: 100%;
+                        top:0;
+                        left: 0;
+                        background-color: rgb(0, 0, 0, 0.5);
+                    }
+
+                    button{
+                        opacity: 1;
+                    }
+                }
+            }            
         }
     }
 }
