--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -1,4 +1,8 @@
 .search-input {
+    position: fixed;
+    z-index: 10;
+    top: 20px;
+
     max-width: 360px;
     width: 100%;
     height: 40px;
