set global token

--- a/src/layouts/Header/Header.scss
+++ b/src/layouts/Header/Header.scss
@@ -28,6 +28,10 @@ header{
             width: 100px;
             height: 30px;
         }
+
+        .search-input{
+            height: 34px;
+        }
     }    
 }
 
