--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -36,7 +36,8 @@ a, button {
 }
 
 h2.list-title{
-    font-size: 24px;   
+    font-size: 24px;
+    font-weight: 600;
     margin: 50px 0 24px;
 }
 
