--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -1,6 +1,9 @@
 .cards-wrapper{
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-    grid-gap: 20px;
-    align-items: stretch;
+    
+    .cards{
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+        grid-gap: 20px;
+        align-items: stretch;
+    }
 }
