--- a/src/components/TopResult/TopResult.scss
+++ b/src/components/TopResult/TopResult.scss
@@ -5,7 +5,8 @@
         height: 320px;
 
         .cover {
-            width: 300px;
+            max-width: 300px;
+            min-width: 300px;
             height: 100%;
             margin: 0;
         }
@@ -19,7 +20,12 @@
             }
 
             p{
-                font-size: 20px;  
+                font-size: 20px;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 3;
+                -webkit-box-orient: vertical;
             }
         }
     }
