--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -1,4 +1,8 @@
 .search-input {
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
     max-width: 360px;
     width: 100%;
     height: 40px;
