--- a/src/layouts/Footer/Footer.scss
+++ b/src/layouts/Footer/Footer.scss
@@ -5,4 +5,9 @@ footer{
     background-color: #181818;
     border-top: 1px solid #282828;
     margin-top: auto;
+    
+    .container{
+        height: 100%;
+        align-items: center;
+    }
 }
