fix play/pause on items

--- a/src/components/PlayerControls/PlayerControls.scss
+++ b/src/components/PlayerControls/PlayerControls.scss
@@ -1,4 +1,9 @@
 .Player-controls{
+    position: absolute;
+    width: fit-content;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
     gap: 20px;
     align-items: center;
 
