--- a/src/components/TopResult/TopResult.scss
+++ b/src/components/TopResult/TopResult.scss
@@ -1,5 +1,6 @@
 .top-result {
     .card {
+        display: flex;
         gap: 20px;
         align-items: center;
         height: 320px;
@@ -14,7 +15,7 @@
         .card-content{
             max-width: 260px;
 
-            h3{
+            h4{
                 font-size: 24px;
                 font-weight: 600;
             }
