--- a/src/components/TopTracks/TopTracks.scss
+++ b/src/components/TopTracks/TopTracks.scss
@@ -18,7 +18,7 @@
                 max-width: 40px;
                 height: 40px;
 
-                button{
+                svg{
                     opacity: 0;
                     position: absolute;
                     left: 50%;
@@ -55,7 +55,7 @@
                         background-color: rgb(0, 0, 0, 0.5);
                     }
 
-                    button{
+                    svg{
                         opacity: 1;
                     }
                 }
