--- a/src/components/TopTracks/TopTracks.scss
+++ b/src/components/TopTracks/TopTracks.scss
@@ -8,17 +8,18 @@
         border-radius: 5px;
         transition: background-color 0.4s;
 
-        .track-details {
+        .card{
+            display: flex;
             align-items: center;
             gap: 20px;
 
-            .track-img{
+            .cover{
                 position: relative;
                 min-width: 40px;
                 max-width: 40px;
                 height: 40px;
 
-                svg{
+                .play-btn{
                     opacity: 0;
                     position: absolute;
                     left: 50%;
@@ -27,12 +28,8 @@
                 }
             }
 
-            .track-details-bottom{
-                flex-direction: column;
-                justify-content: space-between;
-                
-                .track-name {}
-                .track-artists{
+            .card-content{
+                p{
                     color: #b3b3b3;
                     margin-top: 5px;
                     font-size: 14px;
@@ -40,11 +37,15 @@
             }
         }
 
-        &:hover{
+        .track-duration {
+            color: #b3b3b3;
+        }
+
+        &:hover, &.active{
             background-color: #282828;
 
-            .track-details {    
-                .track-img{
+            .card{
+                .cover{
                     &::before{
                         content: "";
                         position: absolute;
@@ -54,12 +55,12 @@
                         left: 0;
                         background-color: rgb(0, 0, 0, 0.5);
                     }
-
-                    svg{
+    
+                    .play-btn{
                         opacity: 1;
                     }
                 }
-            }            
+            }           
         }
     }
 }
